#87 trojity aktualni graf plus nejake opravy